--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 {"@context" : "http://schema.org",
  "@type" : "Organization",  
   "name" : "Kaley Brauer",
-  "url" : "https://kaleybrauer.github.io", 
-  "logo": "uploads/images/doe_headshot.jpeg" }
+  "url" : "https://www.kaleybrauer.com/", 
+  "image": "uploads/images/doe_headshot.jpeg" }
 </script>
 
 		<title>Kaley Brauer - About</title>
@@ -26,7 +26,8 @@
 <meta property="og:site_name" content="Kaley Brauer" />
 <meta property="og:title" content="Kaley Brauer" />
 <meta property="og:description" content="Computational Astrophysicist" />
-<meta property="og:image" content="https://kaleybrauer.github.io/uploads/images/doe_headshot.jpeg" />
+<meta property="og:image" content="https://www.kaleybrauer.com/uploads/images/doe_headshot.jpeg" />
+<meta name="twitter:image" content="https://www.kaleybrauer.com/uploads/images/doe_headshot.jpeg" />
 <meta name="viewport" content="width=device-width">
   
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -178,7 +179,7 @@ var STYLE_PREFIX = 'wsite';
 </span></div>		
 		<div class="logo-spacer"></div>
 		<div class="phone-number"><span class="wsite-text wsite-phone">
-	Astrophysics Ph.D., &nbsp;Massachusetts Institute of Technology
+	Astrophysics NSF Fellow, &nbsp;Harvard University
 </span></div>
 		<div class="social"><div style="text-align:left;"><div style="height:0px;overflow:hidden"></div>
 <span class="wsite-social wsite-social-default"><a class='first-child wsite-social-item wsite-social-linkedin' href='http://www.linkedin.com/in/kaleybrauer' target='_blank'><span class='wsite-social-item-inner'></span></a><a class='first-child wsite-social-item wsite-social-twitter' href='https://twitter.com/kaleybrauer' target='_blank'><span class='wsite-social-item-inner'></span></a><a class='last-child wsite-social-item wsite-social-mail' href='mailto:kbrauer@mit.edu' target='_blank'><span class='wsite-social-item-inner'></span></a></span>
@@ -192,7 +193,7 @@ var STYLE_PREFIX = 'wsite';
 	
 		  <div id="bannerleft">
 			<!-- <div class="wsite-header"></div> -->
-			<img src="uploads/images/doe_headshot_full.jpeg" alt="Picture" style="width: 350px; height: 425px; object-position: top; object-fit: cover;" />
+			<img src="uploads/images/doe_headshot_full.jpeg" alt="Kaley Brauer Headshot" style="width: 350px; height: 425px; object-position: top; object-fit: cover;" />
 		  </div><!-- end banner-left -->
 	
 		  <div id="bannerright" class="landing-banner-outer">
@@ -203,7 +204,7 @@ var STYLE_PREFIX = 'wsite';
 	Computational Astrophysicist
 </span></h2>
 					</br> <span class="wsite-text wsite-headline-paragraph"> <div class="paragraph" style="font-size:15px;">
-	I study galaxy formation and the astrophysical origins of heavy elements using cutting-edge simulations. My specialty is the smallest, earliest galaxies that merged into the Milky Way throughout cosmic time.<br /><br />In April 2023, I defended my Physics Ph.D. at MIT. In July 2023, I will join Harvard University as an NSF Postdoctoral Fellow!<br /><br />When I am not doing research, I enjoy science outreach, dancing, art, hiking, and bicycling.<br /><br />CV: <a href="cv.pdf" target="_blank">view here</a><br />EMAIL: kbrauer@mit.edu </div>
+	I study galaxy formation and the astrophysical origins of heavy elements using cutting-edge simulations. My specialty is the smallest, earliest galaxies that merged into the Milky Way throughout cosmic time.<br /><br />I am currently at Harvard University as an NSF Postdoctoral Fellow! Previously, I received my Physics Ph.D. from MIT.<br /><br />When I am not doing research, I enjoy science outreach, dancing, art, hiking, and bicycling.<br /><br />CV: <a href="cv.pdf" target="_blank">view here</a><br />EMAIL: kbrauer@mit.edu </div>
 </span>
 					<!--{action:button global="false"}-->
 				  </div><!-- end banner inner -->
