--- a/research.html
+++ b/research.html
@@ -154,7 +154,7 @@ var STYLE_PREFIX = 'wsite';
 </span></div>		
 		<div class="logo-spacer"></div>
 		<div class="phone-number"><span class="wsite-text wsite-phone">
-	Astrophysics Ph.D., &nbsp;Massachusetts Institute of Technology
+	Astrophysics NSF Fellow, &nbsp;Harvard University
 </span></div>
 <div class="social"><div style="text-align:left;"><div style="height:0px;overflow:hidden"></div>
 <span class="wsite-social wsite-social-default"><a class='first-child wsite-social-item wsite-social-linkedin' href='http://www.linkedin.com/in/kaleybrauer' target='_blank'><span class='wsite-social-item-inner'></span></a><a class='first-child wsite-social-item wsite-social-twitter' href='https://twitter.com/kaleybrauer' target='_blank'><span class='wsite-social-item-inner'></span></a><a class='last-child wsite-social-item wsite-social-mail' href='mailto:kbrauer@mit.edu' target='_blank'><span class='wsite-social-item-inner'></span></a></span>
@@ -228,7 +228,7 @@ var STYLE_PREFIX = 'wsite';
 
 <div class="paragraph" style="text-align:justify;">
 
-	<img src="uploads/images/milkyway_diagram.jpg" alt="Picture" style="width:auto;max-width:100%" />
+	<img src="uploads/images/milkyway_diagram.jpg" alt="Milky Way Diagram" style="width:auto;max-width:100%" />
 	<div class="paragraph" style="text-align:center;"><div style="font-size:11px;">Anatomy of the Milky Way: Bulge, thin disk, thick disk, stellar halo</div></div>
 
 	<br><br>
@@ -241,7 +241,7 @@ Galactic archaeologists like myself work to interpret all of this data to learn 
 
 	<br><br>
 
-	<img src="uploads/images/doecsgf.jpeg" alt="Picture" style="width:auto;max-width:100%" />
+	<img src="uploads/images/doecsgf.jpeg" alt="Kaley Brauer presenting at US Department of Energy Computational Science Graduate Fellowship Program Review" style="width:auto;max-width:100%" />
 
 <div class="paragraph" style="text-align:center;"><div style="font-size:11px;"> US Department of Energy | Computational Science Graduate Fellowship Program Review 2022 | Washington DC, USA</div></div>
 
