cv update, picture change

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ var STYLE_PREFIX = 'wsite';
 	Computational Astrophysicist
 </span></h2>
 					</br> <span class="wsite-text wsite-headline-paragraph"> <div class="paragraph" style="font-size:15px;">
-	I study galaxy formation and the astrophysical origins of heavy elements using cutting-edge simulations. My specialty is the smallest, earliest galaxies that merged into the Milky Way throughout cosmic time.<br /><br />I am currently at Harvard University as an NSF Postdoctoral Fellow! Previously, I received my Physics Ph.D. from MIT.<br /><br />When I am not doing research, I enjoy science outreach, dancing, art, hiking, and bicycling.<br /><br />CV: <a href="cv.pdf" target="_blank">view here</a><br />EMAIL: kbrauer@mit.edu </div>
+	I study galaxy formation and the astrophysical origins of heavy elements using cutting-edge simulations. My specialty is the smallest, earliest galaxies that merged into the Milky Way throughout cosmic time.<br /><br />I am currently at Harvard University as an NSF Postdoctoral Fellow! Previously, I received my Physics Ph.D. from MIT.<br /><br />When I am not doing research, I enjoy science outreach, dancing, art, hiking, and bicycling.<br /><br />CV: <a href="cv.pdf" target="_blank">view here</a><br />EMAIL: kaley.brauer@cfa.harvard.edu </div>
 </span>
 					<!--{action:button global="false"}-->
 				  </div><!-- end banner inner -->
