--- a/index.html
+++ b/index.html
@@ -232,6 +232,26 @@ var STYLE_PREFIX = 'wsite';
 
 
 
+
+<tr class="wsite-multicol-tr">			
+				<td class="wsite-multicol-col" style="width:35%; padding:0 0; vertical-align:middle">
+<div><div class="wsite-image wsite-image-border-border-width:0 " style="padding-top:10px;padding-bottom:10px;margin-left:60px;margin-right:20px;text-align:right">
+<a href="https://news.uchicago.edu/story/scientists-find-one-most-ancient-stars-formed-another-galaxy">
+<img src="uploads/images/lmc.jpg" alt="Picture" style="width:auto;max-width:100%" />
+</a>
+</div></div>
+				</td>				
+				<td class="wsite-multicol-col" style="width:65%; padding:0 0; vertical-align:middle">
+<div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:30px;text-align:center">
+<div class="paragraph" style="text-align:left; font-size:18px;">
+	<a href="https://news.uchicago.edu/story/scientists-find-one-most-ancient-stars-formed-another-galaxy">UChicago News: Scientists find one of the most ancient stars that formed in another galaxy</a></div>
+<div class="paragraph" style="text-align:left;"><b>Mar 20, 2024:</b> Press release for paper my collaborators and I published that identifies ancient stars in the Large Magellanic Cloud. One star has a unique signature, implying it may have formed after a single supernova.
+</div></div>
+	</td>			</tr>
+
+
+
+
 <tr class="wsite-multicol-tr">			
 				<td class="wsite-multicol-col" style="width:35%; padding:0 0; vertical-align:middle">
 <div><div class="wsite-image wsite-image-border-border-width:0 " style="padding-top:10px;padding-bottom:10px;margin-left:60px;margin-right:20px;text-align:right">
