--- a/outreach.html
+++ b/outreach.html
@@ -276,7 +276,7 @@ Recently, I was awarded NSF funding to create astronomy children's books. This p
 						
 
 <div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:10px;margin-right:5px;text-align:center">
-<img src="uploads/images/piday_rocket.JPEG" alt="Picture" style="width:auto;max-width:100%" />
+<img src="uploads/images/piday_rocket.jpeg" alt="Picture" style="width:auto;max-width:100%" />
 <div style="display:block;font-size:90%"></div>
 </div>
 
