--- a/outreach.html
+++ b/outreach.html
@@ -360,7 +360,7 @@ Recently, I was awarded NSF funding to create astronomy children's books. This p
 
 <h2 class="wsite-content-title"><font size="5">OUTREACH TALKS</font></h2>
 
-<div class="paragraph">I give outreach talks such as <a href="https://astronomyontap.org/locations/boston-ma/">Astronomy on Tap Boston</a>, which features events at local bars, breweries, and coffee shops where astronomy experts give public talks, followed by space-themed trivia.</div>
+<div class="paragraph">I give outreach talks such as <a href="https://astronomyontap.org/locations/boston-ma/">Astronomy on Tap Boston</a>, which hosts public astronomy events at local bars, breweries, and coffee shops, and <a href="https://outreach.mit.edu/programs/mit-museum-teen-science-cafes/">MIT Museum's Science Cafe</a>, which connects high school students with science experts at the MIT Museum.</div>
 
 <div></div>
 
