--- a/outreach.html
+++ b/outreach.html
@@ -222,7 +222,7 @@ Recently, I was awarded NSF funding to create astronomy children's books. This p
 
 <h2 class="wsite-content-title" style="text-align:left;"><font size="5">ASTRONOMY CHILDREN'S BOOKS</font></h2>
 
-<div class="paragraph" style="text-align:left;">Creating an astronomy children’s book is a dream of mine, and I am so excited that NSF decided to support this project. The first book has been written and the second book is being edited. After publication, we plan to work with Boston-area elementary schools to distribute copies through a series of outreach events.</div>
+<div class="paragraph" style="text-align:left;">Creating an astronomy children’s book is a dream of mine, and I am so excited that NSF decided to support this project. The first book, "You Are Here", has been written and the second book is being edited. After publication, we plan to work with Boston-area elementary schools to distribute copies through a series of outreach events.</div>
 
 <div></div>
 
